# raft

./: Cargo.toml  README.md
proto/: raft.proto
src/: consensus.rs  lib.rs  raftlog.rs  rpc.rs  state.rs
src/persistance/: mock.rs  mod.rs
src/persistence/: mock.rs  mod.rs
tests/: harness.rs  integration_test.rs
