[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
log = "0.4.21"
once_cell = "1.19.0"
prost = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tonic = "0.11.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
console-subscriber = "0.2.0"

[build-dependencies]
tonic-build = "0.11"
